Location of political districts when address edited. Private config file now has sub-sections.

--- a/app/views/quick_poll_responses/index.html.erb
+++ b/app/views/quick_poll_responses/index.html.erb
@@ -223,7 +223,7 @@ Asqed by <%= link_to @jot.official_name_with_abbreviated_title, official_url(@jo
 <p>
 <div id="disqus_thread"></div>
     <script type="text/javascript">
-        var disqus_shortname = 'asqus'; 
+        var disqus_shortname = '<%= @disqus_forum %>'; 
         var disqus_identifier = '<%= @quick_poll.issue.id %>';
         var disqus_title = '<%= @quick_poll.issue.title %>';
         /* * * DON'T EDIT BELOW THIS LINE * * */
