--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -59,7 +59,7 @@
   	<td><%= senator.office_type_name %></td>
 	<td><%= link_to senator.official_name, official_path(senator.official_id) %></td>
 	<td>
-	  <% if senator.has_photo? %>
+	  <% if senator.photo_path != "" %>
 	      <%= image_tag senator.photo_path, :height => 125, :width => 100 %>
 	  <% else %>
 	      No photo.
@@ -76,7 +76,7 @@
   	<td><%= rep.office_type_name %></td>
 	<td><%= link_to rep.official_name, official_path(rep.official_id)%></td>
 	<td>
-	  <% if rep.has_photo? %>
+	  <% if rep.photo_path != "" %>
 	    <%= image_tag rep.photo_path, :height => 125, :width => 100 %>
 	  <% else %>
 	    No photo.
