Attempt to make css more like xacte.com

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,4 +27,4 @@
 }
 
 @import "scaffolds.css.scss";
-@import "bootstrap_and_overrides.css.less";
+/* @import "bootstrap_and_overrides.css.less"; */
