--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" style="background-color: #012345; background: none; background-image: none;">
+<!-- div class="navbar navbar-fixed-top"> <!-- _navigation.html.erb -->
+  <!-- div class="navbar-inner" -->
+    <!-- div class="container" -->
+    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" > <!-- style="background-color: #012345; background: none; background-image: none;" -->
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -47,6 +47,6 @@
 
         </ul>
       </div> <!-- nav-collapse -->
-    </div> <!-- container -->
-  </div><!-- navbar-inner -->
-</div><!-- navbar -->
+    <!-- /div> <!-- container -->
+  <!-- /div><!-- navbar-inner -->
+<!-- /div><!-- navbar -->
