Mobile looks better.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,16 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
-    <link href="http://xacte.com/bootstrap/css/bootstrap.css" rel="stylesheet"/>
-    <link href="http://xacte.com/fontawesome/css/font-awesome.css" rel="stylesheet"/>
+    <!-- link href="http://xacte.com/bootstrap/css/bootstrap.css" rel="stylesheet"/ -->
+    <!-- link href="http://xacte.com/fontawesome/css/font-awesome.css" rel="stylesheet"/ -->
     <!-- style type="text/css">
       body {
         padding-top: 60px;
       }
     </style -->
-    <link href="http://xacte.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/>
+    <!-- link href="http://xacte.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/ -->
   </head>
-  <body>
+  <body >
     <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
