--- a/app/views/quick_poll_responses/index.html.erb
+++ b/app/views/quick_poll_responses/index.html.erb
@@ -200,7 +200,7 @@ window.console = window.console || (function(){
 
 <hr/>
 
-<div id="graph" style="height: 400px; margin:0 auto"></div>
+<div id="graph" style="height: 400px; margin:0; width:auto;"></div>
 <hr/>
 <div class="row">
 <div id="pollBody" class="span8">
