Added bootstrap js assests to the project.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,8 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://xacte.com/jss/jquery.js"></script>
-    <script src="http://xacte.com/jss/bootstrap-transition.js"></script>
+    <!-- script src="http://xacte.com/jss/jquery.js"></script -->
+    <!-- script src="http://xacte.com/jss/bootstrap-transition.js"></script>
     <script src="http://xacte.com/jss/bootstrap-alert.js"></script>
     <script src="http://xacte.com/jss/bootstrap-modal.js"></script>
     <script src="http://xacte.com/jss/bootstrap-dropdown.js"></script>
@@ -61,7 +61,7 @@
     <script src="http://xacte.com/jss/bootstrap-popover.js"></script>
     <script src="http://xacte.com/jss/bootstrap-button.js"></script>
     <script src="http://xacte.com/jss/bootstrap-collapse.js"></script>
-    <script src="http://xacte.com/jss/bootstrap-carousel.js"></script>
+    <script src="http://xacte.com/jss/bootstrap-carousel.js"></script -->
 
   </body>
 </html>
