--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     </style -->
     <!-- link href="http://xacte.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/ -->
   </head>
-  <body >
+  <body style="padding-top:40px;" >
     <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
