--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,15 +24,15 @@
     </style -->
     <!-- link href="http://xacte.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/ -->
   </head>
-  <body style="padding-top:40px;" >
+  <body style="padding-top:20px;" >
     <header class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
+      <div class="navbar-inner" >
         <div class="container">
           <%= render 'layouts/navigation' %>
         </div>
       </div>
     </header>
-    <div id="main" role="main">
+    <div id="main" role="main" style="margin-left:10px;">
       <div class="container">
         <div class="content">
            <div class="row">
