--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,23 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <% if mobile_site? %>
+<% if mobile_site? %>
       <%= stylesheet_link_tag "mobile" %>
     <% else %>
       <%= stylesheet_link_tag "desktop" %>
-    <% end %>
+<% end %>
+
+    <style type="text/css">
+<% if mobile_site? %>
+    <% else %>
+#main {
+  margin-left:20px;
+}
+body {
+  padding-top:40px;
+}
+<% end %>
+    </style>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
@@ -24,7 +36,7 @@
     </style -->
     <!-- link href="http://xacte.com/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/ -->
   </head>
-  <body style="padding-top:20px;" >
+  <body >
     <header class="navbar navbar-fixed-top">
       <div class="navbar-inner" >
         <div class="container">
@@ -32,7 +44,7 @@
         </div>
       </div>
     </header>
-    <div id="main" role="main" style="margin-left:10px;">
+    <div id="main" role="main">
       <div class="container">
         <div class="content">
            <div class="row">
