--- a/app/assets/stylesheets/bootstrap-responsive.css.scss
+++ b/app/assets/stylesheets/bootstrap-responsive.css.scss
@@ -612,9 +612,9 @@
   .navbar-fixed-top, .navbar-fixed-bottom {
     position: static;
   }
-  .navbar-fixed-top {
-    margin-bottom: 18px;
-  }
+//  .navbar-fixed-top {
+//    margin-bottom: 18px;
+//  }
   .navbar-fixed-bottom {
     margin-top: 18px;
   }
