--- a/app/views/quick_poll_responses/index.html.erb
+++ b/app/views/quick_poll_responses/index.html.erb
@@ -83,14 +83,18 @@ window.console = window.console || (function(){
                     allowPointSelect: true,
                     cursor: 'pointer',
                     dataLabels: {
-                        enabled: true,
-                        color: '#000000',
-                        connectorColor: '#000000',
-                        formatter: function() {
-                            percent=Math.round(this.percentage*100.0)/100;
-                            return '<b>'+ this.point.name +'</b>: '+ percent +' %';
-                        }
-                    }
+                        enabled: false
+                    },
+                    showInLegend: true
+                    //dataLabels: {
+                    //    enabled: true,
+                    //    color: '#000000',
+                    //    connectorColor: '#000000',
+                    //    formatter: function() {
+                    //        percent=Math.round(this.percentage*100.0)/100;
+                    //       return '<b>'+ this.point.name +'</b>: '+ percent +' %';
+                    //   }
+                    //}
                 }
             },
             series: [{
