fixed weird issue editing breakage

--- a/app/views/official_mailer/poll_notification_email.html.erb
+++ b/app/views/official_mailer/poll_notification_email.html.erb
@@ -12,7 +12,7 @@
 	<% end %>
 	<p><ul>
 	<% @quick_polls.each do |quick_poll| %>
-	  <li><%= quick_poll.name %></li>
+	  <li><%= quick_poll.title %></li>
 	<% end %>
 	</ul></p>
 	<p>
