--- a/app/views/official_mailer/poll_notification_email.text.erb
+++ b/app/views/official_mailer/poll_notification_email.text.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <% @quick_polls.each do |quick_poll| %>
-  <%= quick_poll.name %>
+  <%= quick_poll.title %>
 <% end %>
 
 Log into Asq.us now and make your voice heard.
