--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container">
 
-<table width=400>
+<table class="recordsTable" width=400>
 <tr><th>Office</th><th>Incumbent</th><th></th></tr>
 
 <% if @governor_office %>
@@ -88,6 +88,7 @@
 
 
 </table>
+
 
 <h4>Open Polls</h4>
 
