--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,16 @@
  *= require_self
  *= require_tree .
 */
+
+.recordsTable {
+	background-color:AliceBlue;
+	border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+}
+
+.recordsTable th {
+	background-color:LightBlue;
+
+	
+}
