--- a/app/views/staff/home/index.html.erb
+++ b/app/views/staff/home/index.html.erb
@@ -1,17 +1,17 @@
 <b>Staff Administration for <%= @incumbent.official_name_with_abbreviated_title %></b>
 <p>
 <h4>Issues:</h4>
-<table>
+<table class="recordsTable">
+	<tr><th>Title</th></tr>
 	<% @issues.each do |issue| %>
 	<tr><td><%= link_to issue.title, staff_issue_path(issue.id) %></td></tr>
 	<% end %>
 </table>
-<p>
 <b><%= link_to 'New Issue', new_staff_issue_path(:poller_type => :Office, :poller_id => @incumbent.office_id.to_s) %></b>
-
+</p>
 <p>
-
-<table width=600>
+<h4>Quick Polls:</h4>
+<table class="recordsTable" width=600>
   <tr>
     <th>Title</th>
 	<th>Start time</th>
@@ -26,15 +26,19 @@
   <% @quick_polls.each do |quick_poll| %>
     <tr>
 	  <td><%= quick_poll.title %></td>
-	  <td><%= quick_poll.start_time %></td>
-	  <td><%= quick_poll.end_time %></td>
+	  <td><%= quick_poll.start_time.to_s(:short) %></td>
+	  <td><%= quick_poll.end_time.to_s(:short) %></td>
 	  <td><%= quick_poll.poll_workflow_state %></td>
+	  <td><%= %></td>
 	  <td><%= link_to 'Show', staff_quick_poll_path(quick_poll) %></td>
 	  <td><%= link_to 'Edit', edit_staff_quick_poll_path(quick_poll) %></td>
 	  <td><%= link_to 'Destroy', staff_quick_poll_path(quick_poll), method: :delete, data: { confirm: 'Are you sure?' } %> </td>	
 	</tr>
   <% end %>
 </table>
-<b><%= link_to 'New Quick Poll', new_staff_quick_poll_path(:poller_type => :Office, :poller_id => @incumbent.office_id.to_s) %></b>
+</p>
 <p>
+<b><%= link_to 'New Quick Poll', new_staff_quick_poll_path(:poller_type => :Office, :poller_id => @incumbent.office_id.to_s) %></b>
+<br>
 <b><%= link_to 'Send Poll Notifications', new_staff_official_mailing_path() %></b>
+</p>
