--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -2,24 +2,19 @@
 
 <table width=400>
   <tr>
+	<th>ANSI</th>
     <th>Name</th>
     <th>State</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @municipalities.each do |municipality| %>
   <tr>
+	<td><%= municipality.ansi_code %>
     <td><%= municipality.name %></td>
     <td><%= municipality.state.name %></td>
-    <td><%= link_to 'Show', municipality %></td>
-    <td><%= link_to 'Edit', edit_municipality_path(municipality) %></td>
-    <td><%= link_to 'Destroy', municipality, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Municipality', new_municipality_path( :state_id => @state.id ) %>
