--- a/app/views/staff/issues/show.html.erb
+++ b/app/views/staff/issues/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <b>Comment:</b>
+  <%= @issue.comment %>
+</p>
+
+<p>
   <b>Tags:</b>
   <% comma = "" %>
   <% @issue.tags.each do |tag| %>
